[UPD] rename and customize stuff

--- a/iterm2/.iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/.iterm2/com.googlecode.iterm2.plist
@@ -2069,7 +2069,7 @@
 			<key>Window Type</key>
 			<integer>0</integer>
 			<key>Working Directory</key>
-			<string>/Users/mavam</string>
+			<string>/Users/henriblancke</string>
 		</dict>
 		<dict>
 			<key>ASCII Anti Aliased</key>
@@ -2797,7 +2797,7 @@
 			<key>Window Type</key>
 			<integer>0</integer>
 			<key>Working Directory</key>
-			<string>/Users/mavam</string>
+			<string>/Users/henriblancke</string>
 		</dict>
 		<dict>
 			<key>ASCII Anti Aliased</key>
@@ -3431,7 +3431,7 @@
 			<key>Window Type</key>
 			<integer>0</integer>
 			<key>Working Directory</key>
-			<string>/Users/mavam</string>
+			<string>/Users/henriblancke</string>
 		</dict>
 		<dict>
 			<key>ASCII Anti Aliased</key>
@@ -4067,7 +4067,7 @@
 			<key>Window Type</key>
 			<integer>0</integer>
 			<key>Working Directory</key>
-			<string>/Users/mavam</string>
+			<string>/Users/henriblancke</string>
 		</dict>
 	</array>
 	<key>NoSyncHaveWarnedAboutPasteConfirmationChange</key>
