--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -42,5 +42,5 @@
 	enabled = true
 
 [user]
-	name = Matthias Vallentin
-	email = vallentin@icir.org
+	name = Henri Blancke
+	email = blanckehenri@gmail.com
